# PKI-Playground

./: README.md  plan.md  pyproject.toml
.githooks/: pre-commit
admin/: biome.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
admin/src/: App.tsx  index.css  main.tsx  tokens.css
admin/src/components/: AppShell.tsx  LoginForm.tsx  Splash.tsx  ThemeToggle.tsx
admin/src/constants/: auth.ts  index.ts  state.ts  urls.ts
admin/src/hooks/: useMe.ts  useTheme.ts
admin/src/lib/: api.ts
admin/src/sections/: DeploymentsSection.tsx  InfrastructureSection.tsx  IpPoolSection.tsx  RegistrySection.tsx  UsersSection.tsx
admin/src/store/: auth.ts  theme.ts
backend/: .env.example  pyproject.toml
backend/src/app/: __init__.py  celery_app.py  cli.py  main.py  tasks.py
backend/src/app/assets/firstboot/_agent/: 40-install-orchestrator.ps1
backend/src/app/assets/firstboot/certificateAuthority/: 30-role-certificate-authority.ps1
backend/src/app/assets/firstboot/client/: 30-role-client.ps1
backend/src/app/assets/firstboot/domainController/: 30-role-domain-controller.ps1
backend/src/app/assets/firstboot/webServer/: 30-role-web-server.ps1
backend/src/app/core/: agentbus.py  agents.py  authz.py  datastore_image.py  environment_preflight.py  errors.py  esxi.py  evidence.py  execution_manifest.py  firstboot.py  golden_image.py  identity.py  infrastructure.py  infrastructure_preflight.py  ippool.py  oidc.py  secrets.py  sessions.py  settings.py  teardown.py  template_config.py  topology.py  vmware_guest_os.py
backend/src/app/core/db/: __init__.py  client.py  models.py
backend/src/app/core/jobs/: __init__.py  models.py  pubsub.py  registry.py  runner.py  transport.py
backend/src/app/core/sequences/: __init__.py  context.py  definitions.py  engine.py  health.py  journey.py  model.py  worker.py
backend/src/app/routers/: __init__.py  admin_deployments.py  admin_users.py  auth.py  deploy.py  ip_pool.py  iso.py  orchestrator.py  project_shares.py  projects.py  settings.py  vm.py  vm_registry.py  ws.py
backend/tests/: test_agentbus_boot_probe.py  test_agentbus_dispatch.py  test_agentbus_reconnect.py  test_agentbus_stability.py  test_agents_takeover.py  test_certificate_journey.py  test_clone_failure_cleanup.py  test_command_catalog.py  test_datastore_image.py  test_deploy_base_collision.py  test_deploy_compile.py  test_domain_join_sequence.py  test_domain_leave_sequence.py  test_environment_preflight.py  test_esxi_connection.py  test_evidence_bundle.py  test_forest_and_crosssign.py  test_golden_image_preflight.py  test_golden_image_settings.py  test_infrastructure_preflight.py  test_lab_health.py  test_linux_product_templates.py  test_orchestrator_keepalive.py  test_plan_clone_sizing.py  test_plan_fanout.py  test_project_shares.py  test_reconcile_plan.py  test_recovery_acceptance.py  test_sequence_context.py  test_sequence_engine.py  test_sequences_wiring.py  test_sequences_worker_metrics.py  test_teardown_compiler.py  test_template_config.py  test_topology_compiler.py  test_topology_validator.py  test_web_and_client.py
backend/tests/fixtures/: command_catalog.json
deploy/: prod-deploy.sh
deploy/hooks/: post-receive
docs/: PKI_LAB_FEATURES.md  full-two-tier-pki-roadmap.md  two-tier-lab-verification.md
frontend/: .env.example  biome.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: HealthBadge.tsx  LoginForm.tsx  LogoutButton.tsx  SettingsDialog.tsx  ThemeToggle.tsx
frontend/src/constants/: auth.ts  index.ts  state.ts  templates.ts  topology.ts  urls.ts
frontend/src/hooks/: useAgentConnected.ts  useAgentPromotion.ts  (+4 more)
(+70 files in other folders)
