[project]
name = "VM-Deploy-API"
version = "0.1.0"
description = "FastAPI backend over the vmkit / configgen / isokit libraries."
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "vmkit",
    "configgen",
    "isokit",
]

[tool.uv.sources]
vmkit = { git = "https://github.com/Arnesh-EC/vmkit.git", tag = "v0.1.0" }
configgen = { git = "https://github.com/Arnesh-EC/configgen.git", tag = "v0.1.0" }
isokit = { git = "https://github.com/Arnesh-EC/isokit.git", tag = "v0.1.0" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
