[project]
name = "PKI-Deploy-API"
version = "0.1.0"
description = "FastAPI backend to automate vm/pki deloyment."
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.7",
    "celery>=5.6",
    "redis>=5.0",
    "pymongo>=4.13",
    "pyjwt>=2.10",
    "pwdlib[argon2]>=0.2",
    "cryptography>=44",
    "httpx>=0.28",
    "python-multipart>=0.0.20",
    "vmkit",
    "configgen",
    "isokit",
]

[tool.uv.sources]
vmkit = { git = "https://github.com/Arnesh-EC/vmkit.git", tag = "v0.3.0" }
configgen = { git = "https://github.com/Arnesh-EC/configgen.git", tag = "v0.2.0" }
isokit = { git = "https://github.com/Arnesh-EC/isokit.git", tag = "v0.2.0" }

[project.scripts]
start = "app.cli:main"
worker = "app.cli:worker"
create-admin = "app.cli:create_admin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
